footer spacing issue fix

--- a/css/main.css
+++ b/css/main.css
@@ -193,8 +193,8 @@ and (max-device-width : 667px) {
 }
 */
 
-p:last-child {
-  padding-bottom: 30px;
+.main-content p:last-child {
+  padding-bottom: 100px;
 }
 
 /******************************
